<resources>
    <string name="app_name">Coalba</string>

    <!-- ToolBar -->
    <string name="toolbar_logo">로고</string>
    <string name="toolbar_notice">알림</string>

    <!-- BottomNavigation -->
    <string name="bottomnavigation_home">홈</string>
    <string name="bottomnavigation_workspace">워크스페이스</string>
    <string name="bottomnavigation_message">쪽지</string>
    <string name="bottomnavigation_mypage">마이페이지</string>

    <!-- Base -->
    <string name="base_name1">김다은</string>
    <string name="base_name2">신지연</string>
    <string name="base_name3">조예진</string>
    <string name="base_store_name1">송이커피 숙대점</string>
    <string name="base_store_name2">송이마라탕 숙대점</string>
    <string name="base_store_name3">송이쌀국수 숙대점</string>
    <string name="base_time">15:00-19:00</string>
    <string name="base_starttime">15:00</string>
    <string name="base_midtime">-</string>
    <string name="base_endtime">19:00</string>
    <string name="base_ok">확인</string>
    <string name="base_cancel">취소</string>
    <string name="base_state">근무중</string>
    <string name="base_come">출근</string>
    <string name="base_leave">퇴근</string>

    <!-- Home -->
    <string name="home_noschedule"> 오늘은 알바 스케줄이 없습니다</string>
    <string name="home_progressbar">비콘 감지중입니다..</string>

    <!-- ProfileRegister -->
    <string name="profileregister_title">프로필 등록</string>
    <string name="profileregister_name">이름</string>
    <string name="profileregister_et_name">이름을 적어주세요</string>
    <string name="profileregister_phonenumber">전화번호</string>
    <string name="profileregister_et_phonenumber">전화번호를 적어주세요</string>
    <string name="profileregister_birth">생년월일</string>
    <string name="profileregister_et_birth">생년월일 (yyyy-MM-dd)</string>
    <string name="profileregister_type">회원유형</string>
    <string name="profileregister_completion">완료</string>
    <string name="profileregister_CEO">사장</string>
    <string name="profileregister_parttime">알바생</string>

    <!-- ProfileModify -->
    <string name="profileedit_title">프로필 수정</string>

    <!-- Mypage -->
    <string name="mypage_staff"> 알바님</string>
    <string name="mypage_greet">오늘도 수고하세요~</string>
    <string name="mypage_profile_modify">프로필 수정</string>
    <string name="mypage_title1">알바 관리</string>
    <string name="mypage_title2">개인 관리</string>
    <string name="mypage_manage1">근무내역 및 알바비 관리</string>
    <string name="mypage_manage2">대타근무 요청 관리</string>
    <string name="mypage_memo">메모장</string>
    <string name="mypage_logout">로그아웃</string>

    <!-- WorkspaceHome -->
    <string name="workspacehome_month">2022년 10월</string>
    <string name="workspacehome_sun">일</string>
    <string name="workspacehome_mon">월</string>
    <string name="workspacehome_tue">화</string>
    <string name="workspacehome_wed">수</string>
    <string name="workspacehome_thu">목</string>
    <string name="workspacehome_fri">금</string>
    <string name="workspacehome_sat">토</string>
    <string name="workspacehome_day">11</string>

    <!-- SubstituteRequest -->
    <string name="substituterequest_dialog">대타 요청 수신자 한 명을 선택해주세요!</string>
    <string name="substituterequest_putperson">대타 요청할 근무자를 선택해주세요</string>
    <string name="substituterequest_message">대타 근무자에게 전달할 메시지를 입력해주세요</string>
    <string name="substituterequest_date">2023-03-21</string>
    <string name="substituterequest_cancel">요청 취소</string>
    <string name="substituterequest_ok">대타 요청</string>

    <!-- Substitute -->
    <string name="substitut_year">2023</string>
    <string name="substitut_year2">년</string>
    <string name="substitut_month">2</string>
    <string name="substitut_month2">월</string>

    <!-- SubstituteProcess -->
    <string name="substituteprocess_title">대타근무 요청 처리</string>
    <string name="substituteprocess_content">오늘 시험이 있어서요...대타 부탁드려요!</string>
    <string name="substituteprocess_reject">요청 거절</string>
    <string name="substituteprocess_allow">요청 수락</string>

    <!-- WorkHistory -->
    <string name="workhistory_title">근무내역 및 알바비 관리</string>
    <string name="workhistory_month">7</string>
    <string name="workhistory_monthtext">월</string>
    <string name="workhistory_total_time">총 근로 시간</string>
    <string name="workhistory_total_pay">예상 근로비</string>
    <string name="workhistory_hour1">35</string>
    <string name="workhistory_hour">시간</string>
    <string name="workhistory_minute1">00</string>
    <string name="workhistory_minute">분</string>
    <string name="workhistory_sum">320,600</string>
    <string name="workhistory_won">원</string>
    <string name="workhistory_zero">30</string>

    <!-- Message -->
    <string name="message_send">보낸 쪽지</string>
    <string name="message_receive">받은 쪽지</string>
    <string name="message_date">01/29 16:20</string>
    <string name="message_content">사장님!! 오늘 스케줄 나왔나요??</string>
    <string name="message_send_title">전달 메시지</string>
    <string name="message_send_content">전달할 메시지를 입력해주세요</string>
    <string name="message_send_count">0</string>
    <string name="message_send_slash">/</string>
    <string name="message_send_limit">150</string>
    <string name="message_send_btn">쪽지 보내기</string>

    <string name="name_ex">조예진</string>
    <string name="place_ex">송이커피 숙대점</string>
    <string name="date_ex">10/30</string>
    <string name="starttime_ex">16:00</string>
    <string name="endtime_ex">21:00</string>
    <string name="request_message">요청메시지</string>
    <string name="request_check">요청 확인</string>
    <string name="substitute_state">수락</string>
    <string name="substitute_request">대타근무 요청</string>
    <string name="substitute_name">대타 근무자</string>
    <string name="substitute_detail">대타근무 요청 상세</string>
</resources>