<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:layout_marginHorizontal="24dp"
    android:layout_marginVertical="12dp"
    android:background="@drawable/bg_recyclerview"
    android:elevation="8dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_substitute_profile"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_emptyimg"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_substitute_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_ex"
        android:textColor="@color/black"
        android:textSize="17dp"
        android:textStyle="bold"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/iv_substitute_profile"
        app:layout_constraintTop_toTopOf="@id/iv_substitute_profile"
        app:layout_constraintBottom_toBottomOf="@id/iv_substitute_profile"/>

    <TextView
        android:id="@+id/tv_substitute_workname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/place_ex"
        android:textColor="#8B8B8B"
        android:textSize="15dp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/iv_substitute_profile"
        app:layout_constraintTop_toBottomOf="@id/iv_substitute_profile"/>

    <TextView
        android:id="@+id/tv_substitute_starttime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_date"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/tv_substitute_workname"
        app:layout_constraintTop_toBottomOf="@id/tv_substitute_workname"/>

    <TextView
        android:id="@+id/tv_substitute_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/base_midtime"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        android:layout_marginStart="4dp"
        app:layout_constraintStart_toEndOf="@id/tv_substitute_starttime"
        app:layout_constraintTop_toBottomOf="@id/tv_substitute_workname"/>

    <TextView
        android:id="@+id/tv_substitute_endtime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/base_endtime"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        android:layout_marginStart="4dp"
        app:layout_constraintStart_toEndOf="@id/tv_substitute_to"
        app:layout_constraintTop_toBottomOf="@id/tv_substitute_workname"/>

    <TextView
        android:id="@+id/tv_substitute_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="X"
        android:textColor="@color/gray"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>