<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_substitute_first_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/substitut_year"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_substitute_first_year2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/substitut_year2"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/tv_substitute_first_year"
        app:layout_constraintTop_toTopOf="@id/tv_substitute_first_year"/>

    <TextView
        android:id="@+id/tv_substitute_first_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/substitut_month"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:textStyle="bold"
        android:layout_marginStart="4dp"
        app:layout_constraintStart_toEndOf="@id/tv_substitute_first_year2"
        app:layout_constraintTop_toTopOf="@id/tv_substitute_first_year"/>

    <TextView
        android:id="@+id/tv_substitute_first_month2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/substitut_month2"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/tv_substitute_first_month"
        app:layout_constraintTop_toTopOf="@id/tv_substitute_first_year"/>

    <LinearLayout
        android:id="@+id/ll_substitute_first"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="2dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_substitute_first_year"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="#D9D9D9"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_substitute_first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="vertical"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_substitute_first"/>

</androidx.constraintlayout.widget.ConstraintLayout>