<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_message_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_receive"
        android:textColor="@color/receive_message"
        android:textSize="13dp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_message_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_date"
        android:textColor="@color/gray"
        android:textSize="10dp"
        android:textStyle="bold"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_message_title"
        app:layout_constraintBottom_toBottomOf="@id/tv_message_title"/>

    <TextView
        android:id="@+id/tv_message_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_content"
        android:textColor="@color/black"
        android:textSize="13dp"
        android:layout_marginTop="8dp"
        android:paddingEnd="20dp"
        app:layout_constraintStart_toStartOf="@id/tv_message_title"
        app:layout_constraintTop_toBottomOf="@id/tv_message_title"/>

    <View
        android:id="@+id/ll_message"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/line"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_message_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>