<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SubstituteRequestActivity">

    <ImageView
        android:id="@+id/iv_substitute_request_back"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_margin="16dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_substitute_request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/substitute_request"
        android:textColor="@color/black"
        android:textSize="21dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/iv_substitute_request_back"
        app:layout_constraintBottom_toBottomOf="@id/iv_substitute_request_back"/>

    <ScrollView
        android:id="@+id/sv_substitute_request"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_substitute_request"
        android:overScrollMode="never">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_substitute_request"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="100dp"
            android:layout_margin="16dp">

            <TextView
                android:id="@+id/tv_substitute_request_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/substitute_name"
                android:textSize="17dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_person"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/bg_mypage"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="@id/tv_substitute_request_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_substitute_request_name">

                <TextView
                    android:id="@+id/tv_substitute_putperson"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/substituterequest_putperson"
                    android:textSize="15dp"
                    android:textColor="@color/gray"
                    android:layout_marginStart="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <ImageView
                    android:id="@+id/iv_substitute_putperson"
                    android:layout_width="16dp"
                    android:layout_height="8dp"
                    android:src="@drawable/ic_dropdown"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintTop_toTopOf="@id/tv_substitute_putperson"
                    app:layout_constraintBottom_toBottomOf="@id/tv_substitute_putperson"
                    app:layout_constraintEnd_toEndOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_substitute_request_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:text="@string/request_message"
                android:textSize="17dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/cl_person"
                app:layout_constraintStart_toStartOf="parent"/>

            <EditText
                android:id="@+id/et_substitute_request_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:paddingTop="16dp"
                android:hint="@string/substituterequest_message"
                android:textSize="15dp"
                android:textStyle="normal"
                android:textColor="@color/black"
                android:gravity="top"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/bg_mypage"
                app:layout_constraintTop_toBottomOf="@id/tv_substitute_request_message"/>

            <LinearLayout
                android:id="@+id/ll_substitute_request"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@id/et_substitute_request_message"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:background="@color/line"/>

            <TextView
                android:id="@+id/tv_substitute_request_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:text="@string/request_check"
                android:textSize="17dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/ll_substitute_request"
                app:layout_constraintStart_toStartOf="parent"/>

            <ImageView
                android:id="@+id/iv_substitute_request_person"
                android:layout_width="32dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_person"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/tv_substitute_request_check"
                app:layout_constraintStart_toStartOf="@id/tv_substitute_request_check"/>

            <TextView
                android:id="@+id/tv_substitute_request_person"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="normal"
                android:textSize="16dp"
                android:layout_marginStart="12dp"
                app:layout_constraintStart_toEndOf="@id/iv_substitute_request_person"
                app:layout_constraintTop_toTopOf="@id/iv_substitute_request_person"
                app:layout_constraintBottom_toBottomOf="@id/iv_substitute_request_person"/>

            <ImageView
                android:id="@+id/iv_substitute_request_place"
                android:layout_width="32dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_place"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@id/iv_substitute_request_person"
                app:layout_constraintStart_toStartOf="@id/tv_substitute_request_check"/>

            <TextView
                android:id="@+id/tv_substitute_request_place"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/place_ex"
                android:textColor="@color/black"
                android:textStyle="normal"
                android:textSize="16dp"
                android:layout_marginStart="12dp"
                app:layout_constraintStart_toEndOf="@id/iv_substitute_request_place"
                app:layout_constraintTop_toTopOf="@id/iv_substitute_request_place"
                app:layout_constraintBottom_toBottomOf="@id/iv_substitute_request_place"/>

            <ImageView
                android:id="@+id/iv_substitute_request_time"
                android:layout_width="32dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_time"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@id/iv_substitute_request_place"
                app:layout_constraintStart_toStartOf="@id/tv_substitute_request_check"/>

            <TextView
                android:id="@+id/tv_substitute_request_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/substituterequest_date"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:textStyle="normal"
                android:layout_marginStart="12dp"
                app:layout_constraintStart_toEndOf="@id/iv_substitute_request_time"
                app:layout_constraintTop_toTopOf="@id/iv_substitute_request_time"
                app:layout_constraintBottom_toBottomOf="@id/iv_substitute_request_time"/>

            <TextView
                android:id="@+id/tv_substitute_request_starttime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/starttime_ex"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:textStyle="normal"
                android:layout_marginStart="4dp"
                app:layout_constraintStart_toEndOf="@id/tv_substitute_request_date"
                app:layout_constraintTop_toTopOf="@id/iv_substitute_request_time"
                app:layout_constraintBottom_toBottomOf="@id/iv_substitute_request_time"/>

            <TextView
                android:id="@+id/tv_substitute_request_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/base_midtime"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:textStyle="normal"
                android:layout_marginStart="4dp"
                app:layout_constraintStart_toEndOf="@id/tv_substitute_request_starttime"
                app:layout_constraintTop_toTopOf="@id/iv_substitute_request_time"
                app:layout_constraintBottom_toBottomOf="@id/iv_substitute_request_time"/>

            <TextView
                android:id="@+id/tv_substitute_request_endtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/endtime_ex"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:textStyle="normal"
                android:layout_marginStart="4dp"
                app:layout_constraintStart_toEndOf="@id/tv_substitute_request_to"
                app:layout_constraintTop_toTopOf="@id/iv_substitute_request_time"
                app:layout_constraintBottom_toBottomOf="@id/iv_substitute_request_time"/>

            <Button
                android:id="@+id/btn_substitute_request_cancel"
                android:layout_width="120dp"
                android:layout_height="44dp"
                android:layout_marginTop="52dp"
                android:background="@drawable/bg_cancelbtn"
                android:text="@string/substituterequest_cancel"
                android:textColor="@color/main"
                android:textSize="18dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/btn_substitute_request"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_substitute_request_time" />

            <Button
                android:id="@+id/btn_substitute_request"
                android:layout_width="120dp"
                android:layout_height="44dp"
                android:layout_marginTop="52dp"
                android:background="@drawable/bg_notworkbtn"
                android:text="@string/substituterequest_ok"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btn_substitute_request_cancel"
                app:layout_constraintTop_toBottomOf="@id/iv_substitute_request_time" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>